# Numbskull

./: AssignInfo.cpp  AssignInfo.h  CMakeLists.txt  Edge.cpp  Edge.h  Factor.cpp  Factor.h  FactorGraph.cpp  FactorGraph.h  FactorType.cpp  FactorType.h  README.md  Utility.cpp  Utility.h  Variable.cpp  Variable.h  Weight.cpp  Weight.h  main.cpp
Input/: Factors  GraphInfo  Variables
make-build-debug/: Makefile
test/: AED.cpp  AGC.cpp  BDC.cpp  BFD.cpp  aws.sh  main.cpp  test.sh
